<resources>
    <string name="app_name">SchorleBuddy</string>
    <string name="profil_name">Profil</string>
    <string name="title_activity_preferences">Profil</string>
    <string name="picture">Picture</string>

    <string name="start">Start:</string>
    <string name="duration">Dauer:</string>
    <string name="sober">Nüchtern in:</string>
    <string name="time_string">%1$s </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_name">Lena</string>
    <string name="side_content_1">STATUS</string>
    <string name="side_content_2">BAR</string>
    <string name="side_content_3">AKTIONEN</string>
    <string name="ImgBtn_wein">0,25l Wein</string>
    <string name="ImgBtn_schorle">0,25l Schorle</string>
    <string name="ImgBtn_bier">0,33l Bier</string>
    <string name="ImgBtn_schnaps">2cl Schnaps</string>
    <string name="ImgBtn_plus">Liste öffnen</string>
    <string name="ImgBtn_wasser">Wasser</string>
    <string name="ImgBtn_camera">Kamera</string>
    <string name="ImgBtn_diary">Diary</string>
    <string name="ImgBtn_game">Game</string>
    <string name="ImgBtn_standort">Standort</string>
    <string name="ImgBtn_map">Map</string>

    <string name="uRSober">Herzlichen Glückwunsch! Du bist nüchtern :)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
