<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lena.schorlebuddy.MainActivity"
    android:weightSum="1">
    <!--tools:showIn="@layout/app_bar_main"-->


    <GridLayout
        android:id="@+id/grid_status"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:columnCount="3"
        android:rowCount="3">
        <TextView
            android:id="@+id/txtview_status"
            android:text="@string/side_content_1"
            android:width="13dp"
            android:height="170dp"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_rowSpan="3"
            android:layout_row="0"
            android:paddingTop="20dp"
          />

        <ImageButton
            android:id="@+id/imgBtn_profile"
            android:src="@drawable/ic_menu_camera"
            android:scaleType="fitXY"
            android:layout_column="1"
            android:onClick="onProfileButtonClick"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            /><!---android:layout_width="@dimen/ImgBtn_width"
            android:layout_height="@dimen/ImgBtn_height"-->
        <TextView
            android:id="@+id/txtview_promille"
            android:layout_width="@dimen/ImgBtn_width"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:textColor="@color/red"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
           />
        <Button
            android:id="@+id/reset"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="reset"
            android:onClick="onResetClick"/>

        <TableLayout
            android:id="@+id/table"
            android:layout_column="2"

            android:layout_rowSpan="2"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp">

            android:layout_rowSpan="3"
            android:layout_width="287dp"
            android:layout_height="118dp"
            android:layout_row="0">

            <TableRow>
                <TextView
                    android:id="@+id/name"
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:textStyle="bold"

                    android:inputType="textNoSuggestions"

                    />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/startLabel"
                    android:text="@string/start"
                    />
                <TextView
                    android:id="@+id/startTime"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/durationLabel"
                    android:text="@string/duration"/>
                <TextView
                    android:id="@+id/duration"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/soberLabel"
                    android:text="@string/sober"/>
                <TextView
                    android:id="@+id/sober"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/soberAtLabel"
                    android:text="@string/soberAt"/>
                <TextView
                    android:id="@+id/soberAt"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/startButton"
            android:text="Start"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_width="75dp"
            android:layout_height="36dp"
            android:onClick="onStartButtonClick"/>
        <Button
            android:id="@+id/StopButton"
            android:text="Stop"
            android:layout_column="2"
            android:layout_marginLeft="20dp"
            android:layout_width="75dp"
            android:layout_height="36dp" />
    </GridLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="4dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/txtview_blend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:textAlignment="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@android:color/darker_gray"/>
    <GridLayout
        android:id="@+id/grid_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:rowCount="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtview_bar"
            android:text="@string/side_content_2"
            android:width="13dp"
            android:height="130dp"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:paddingTop="20dp"/>
        <ImageButton
            android:id="@+id/imgBtn_wein"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="@dimen/ImgBtn_width"
            android:layout_height="@dimen/ImgBtn_height"
            android:src="@drawable/weinglas"
            android:onClick="onImageButtonClick"
            android:tag="@string/ImgBtn_wein"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/txtview_imgbtn_wein"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_width="@dimen/ImgBtn_width"
            android:text="@string/ImgBtn_wein"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"/>
        <ImageButton
            android:id="@+id/imgBtn_schorle"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_width="@dimen/ImgBtn_width"
            android:layout_height="@dimen/ImgBtn_height"
            android:src="@drawable/schorle"
            android:onClick="onImageButtonClick"
            android:tag="@string/ImgBtn_schorle"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/txtview_imgbtn_schorle"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_width="@dimen/ImgBtn_width"
            android:text="@string/ImgBtn_schorle"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"/>
        <ImageButton
            android:id="@+id/imgBtn_bier"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_width="@dimen/ImgBtn_width"
            android:layout_height="@dimen/ImgBtn_height"
            android:src="@drawable/bier"
            android:onClick="onImageButtonClick"
            android:tag="@string/ImgBtn_bier"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/txtview_imgbtn_bier"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_width="@dimen/ImgBtn_width"
            android:text="@string/ImgBtn_bier"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"/>
        <ImageButton
            android:id="@+id/imgBtn_schnaps"
            android:layout_column="4"
            android:layout_row="0"
            android:layout_width="@dimen/ImgBtn_width"
            android:layout_height="@dimen/ImgBtn_height"
            android:src="@drawable/schnaps"
            android:onClick="onImageButtonClick"
            android:tag="@string/ImgBtn_schnaps"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/txtview_imgbtn_schnaps"
            android:layout_column="4"
            android:layout_row="1"
            android:layout_width="@dimen/ImgBtn_width"
            android:text="@string/ImgBtn_schnaps"
            android:textAlignment="center"
            android:layout_marginLeft="5dp"/>
        <ImageButton
            android:id="@+id/imgBtn_plus"
            android:layout_column="6"
            android:layout_row="0"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/plus_48"
            android:onClick="onPlusButtonClick"
            android:background="@drawable/img_btn_style"
            android:scaleType="fitXY"
            android:layout_marginRight="10dp"/>
        <ImageButton
            android:id="@+id/imgBtn_wasser"
            android:layout_column="6"
            android:layout_row="1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/water_48"
            android:background="@drawable/img_btn_style"
            android:onClick="onWaterButtonClick"
            android:scaleType="fitXY"
            android:layout_marginRight="10dp"/>

    </GridLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="4dp"
        android:background="@android:color/darker_gray"/>

    <GridLayout
        android:id="@+id/grid_action"
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:id="@+id/txtview_action"
            android:text="@string/side_content_3"
            android:width="13dp"
            android:height="160dp"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_height="200dp"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:paddingTop="10dp"/>

        <GridLayout
            android:orientation="horizontal"
            android:layout_gravity="fill_horizontal"
            android:layout_column="1"
            android:columnCount="1"
            android:rowCount="4">

            <Button
                android:id="@+id/imgBtn_standpunkt"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Standort anzeigen"
                android:drawableLeft="@drawable/marker_24"
                android:textSize="18sp"
                android:tag="@string/ImgBtn_standort"
                android:onClick="onLocationButtonClick"/>

            <Button
                android:id="@+id/imgBtn_kamera"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Foto aufnehmen"
                android:drawableLeft="@drawable/ic_menu_camera"
                android:textSize="18sp"
                android:tag="@string/ImgBtn_camera"
                android:onClick="onCameraButtonClick"/>

            <Button
                android:id="@+id/imgBtn_diary"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="Verlauf anzeigen"
                android:drawableLeft="@drawable/diary"
                android:textSize="18sp"
                android:tag="@string/ImgBtn_diary"
                android:onClick="onDiaryButtonClick"/>
        </GridLayout>

       <!-- <ImageButton
            android:id="@+id/imgBtn_standpunkt"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_height="@dimen/ImgBtn2_height"
            android:layout_width="@dimen/ImgBtn2_width"
            android:src="@drawable/marker_24"
            android:background="@drawable/img_btn_style"
            android:tag="@string/ImgBtn_standort"
            android:onClick="onImageButtonClick"
            />


        <ImageButton
            android:id="@+id/imgBtn_kamera"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_height="@dimen/ImgBtn2_height"
            android:layout_width="@dimen/ImgBtn2_width"
            android:src="@drawable/ic_menu_camera"
            android:background="@drawable/img_btn_style"
            android:tag="@string/ImgBtn_camera"
            android:onClick="onCameraButtonClick"/>

        <ImageButton
            android:id="@+id/imgBtn_maps"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_height="@dimen/ImgBtn2_height"
            android:layout_width="@dimen/ImgBtn2_width"
            android:src="@drawable/map"
            android:background="@drawable/img_btn_style"
            android:tag="@string/ImgBtn_map"
            android:onClick="onMapsButtonClick"/>
        <ImageButton
            android:id="@+id/imgBtn_diary"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_height="@dimen/ImgBtn2_height"
            android:layout_width="@dimen/ImgBtn2_width"
            android:src="@drawable/diary"
            android:background="@drawable/img_btn_style"
            android:tag="@string/ImgBtn_diary"
            android:onClick="onImageButtonClick"/>
        <ImageButton
            android:id="@+id/imgBtn_spiele"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_height="@dimen/ImgBtn2_height"
            android:layout_width="@dimen/ImgBtn2_width"
            android:src="@drawable/puzzle_24"
            android:background="@drawable/img_btn_style"
            android:tag="@string/ImgBtn_game"
            android:onClick="onImageButtonClick"/>

-->
    </GridLayout>


</LinearLayout>
